src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    color-scheme: light;
    /* https://tailwindcss.com/docs/customizing-colors#using-css-variables */
    --theme-bg: 220deg 23% 95%;
    --theme-text: 234deg 16% 35%;
    --theme-accent: 343 81% 75%;
    --theme-accent-2: 350 65% 77%;
    --theme-surface: 225deg 14% 77%;
    --theme-quote: 199deg 76% 69%;
  }

  :root.dark {
    color-scheme: dark;
    --theme-bg: 210deg 6% 12%;
    --theme-text: 220deg 3% 79%;
    --theme-accent: 170deg 57% 73%;
    --theme-accent-2: 41deg 86% 83%;
    --theme-surface: 200deg 3% 19%;
    --theme-quote: 232deg 97% 85%;
  }

  html {
    @apply scroll-smooth;
  }

  html body {
    @apply mx-auto flex min-h-screen max-w-6xl flex-col px-8 pt-8 font-mono text-sm font-normal antialiased bg-bgColor text-textColor;
  }

  .prose-cody blockquote {
    @apply text-accent border-l-0;
  }

  .prose-cody a {
    @apply no-underline;
  }

  .prose-cody strong {
    font-weight: 700;
  }

  .prose-cody code {
    @apply rounded-sm border-dotted border-surface;
  }

  .prose-cody hr {
    border-top-style: dashed;
    border-top-width: 0.5px;
    @apply border-accent;
  }
  .prose-cody thead {
    @apply border-b-0;
  }

  .prose-cody thead th {
    @apply font-bold border-b border-dashed border-surface;
  }

  .prose-cody tbody tr {
    @apply border-b-0;
  }

  .prose-cody tfoot {
    @apply font-bold border-t border-dashed border-surface;
  }

  .prose-cody sup {
    @apply ms-0.5;
  }

  .prose-cody sup > a {
    @apply bg-none;
  }

  .prose-cody sup > a:hover {
    @apply text-accent no-underline bg-none;
  }

  .prose-cody sup > a:before {
    content: "[";
    @apply text-accent;
  }

  .prose-cody sup > a:after {
    content: "]";
    @apply text-accent;
  }

  .tag {
    @apply bg-accent px-1 py-0 text-bgColor font-semibold text-sm;
  }

  .tag:before {
    content: "#";
    @apply -mr-2;
  }

  .cody-link {
    @apply bg-[size:100%_6px] bg-bottom bg-repeat-x w-fit;
    background-image: linear-gradient(
      transparent,
      transparent 5px,
      hsl(var(--theme-text)) 5px,
      hsl(var(--theme-text))
    );
  }

  .cody-link:hover {
    background-image: linear-gradient(
      transparent,
      transparent 4px,
      hsl(var(--theme-accent)) 4px,
      hsl(var(--theme-accent))
    );
  }

  .sidebar {
    @apply w-1/4;
  }
}

